# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "pks"
version = "0.1.43"
edition = "2021"
description = "Welcome! Please see https://github.com/alexevanczuk/packs for more information!"
license = "MIT"
default-run = "pks"
# This runs all of the optimizations, but doesn't strip debug symbols,
# such as the name of the methods
# This meaningfully increases the size of the binary
[profile.dev]
debug = true

[[bin]]
name = "packs"
path = "src/main.rs"

[[bin]]
name = "pks"
path = "src/main-alt.rs"

[lib]
name = "packs"
path = "src/lib.rs"
# crate-type = ["cdylib"]

[dependencies]
clap = { version = "4.2.1", features = ["derive"] } # cli
clap_derive = "4.2.0" # cli
itertools = "0.10.5" # tools for iterating over iterable things
jwalk = "0.8.1"
path-clean = "1.0.1" # Pathname#cleaname in Ruby
rayon = "1.7.0" # for parallel iteration
regex = "1.7.3"
serde = { version = "~1", features = ["derive"] } # de(serialization)
serde_yaml = "0.9.19"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
glob = "0.3.1"
lib-ruby-parser = "4.0.4"
md5 = "0.7.0"
serde_json = "1.0.96"
line-col = "0.2.1"
ruby_inflector = '0.0.8'
serde_magnus = "0.2.2"
globset = "0.4.10"
petgraph = "0.6.3"

[dev-dependencies]
assert_cmd = "2.0.10" # testing CLI
rusty-hook = "^0.11.2" # git hooks
predicates = "3.0.2" # kind of like rspec assertions
pretty_assertions = "1.3.0" # Shows a more readable diff when comparing objects
